# ExactAuth

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
client_library/: Cargo.toml
client_library/src/: error.rs  lib.rs  protobuf_ext.rs
dal/: Cargo.toml
dal/migrations/: V1__initial.sql
dal/src/: dal_mysql.rs  error.rs  lib.rs
dal/src/entity/: user.rs
exactauth/: Cargo.toml
exactauth/src/: config.rs  error.rs  main.rs
exactauth/src/exact_api/: mod.rs  token.rs
exactauth/src/routes/: mod.rs  redirect.rs
exactauth/src/routes/v1/: access_token.rs  logged_in.rs  login.rs  mod.rs
exactauth/src/tasks/: mod.rs  refresh_tokens.rs
proto/: Cargo.toml  build.rs
proto/protos/payload/: get_access_token.proto
proto/src/: lib.rs
proxy/: Makefile  README.md  config.toml  mrf.local-key.pem  mrf.local.pem
