[package]
name = "dal"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.37"
thiserror = "1.0.38"
rand = "0.8.5"
time = "0.3.17"

[dependencies.proto]
path = "../proto"

[dependencies.mysql]
version = "23.0.1"
default-features = false

[dependencies.refinery]
version = "0.8.7"
features = ["mysql"]
